@@ -21,9 +21,9 @@
 .\"IMPLIED WARRANTIES, INCLUDING, WITHOUT LIMITATION, THE IMPLIED
 .\"WARRANTIES OF MERCHANTABILITY AND FITNESS FOR A PARTICULAR PURPOSE.
 
-.TH "TXR" 1 2014-02-11 "Utility Commands" "Txr Text Processing Language" "Kaz Kylheku"
+.TH "TXR" 1 2014-02-17 "Utility Commands" "Txr Text Processing Language" "Kaz Kylheku"
 .SH NAME
-txr \- text processing language (version 79)
+txr \- text processing language (version 80)
 .SH SYNOPSIS
 .B txr [ options ] query-file { data-file }*
 .sp
